--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>GraphQL: Most of the Parts</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://unpkg.com/prismjs/themes/prism-okaidia.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
